set(TOOLCHAIN_PREFIX "/usr/local")
set(CMAKE_TOOLCHAIN_FILE "~/git/stm32-cmake/cmake/gcc_stm32.cmake")
set(STM32Cube_DIR "~/STM32Cube/Repository/STM32Cube_FW_F1_V1.4.0")
set(STM32_CHIP STM32F103CBT6)
set(CMAKE_BUILD_TYPE "Debug")
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "cmake" "../cmake" "../../cmake")
#add_definitions(-DHSE_VALUE='((uint32_t)12000000)')

PROJECT(move32)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
ENABLE_LANGUAGE(ASM)

FIND_PACKAGE(CMSIS REQUIRED)
FIND_PACKAGE(STM32HAL COMPONENTS dma gpio tim adc i2c uart REQUIRED)

INCLUDE_DIRECTORIES(
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${CMSIS_INCLUDE_DIRS}
    ${STM32HAL_INCLUDE_DIR}
    "include"
)

file(GLOB PROJECT_SOURCES "src/*.h" "src/*.hpp" "src/*.c" "src/*.cpp")

ADD_EXECUTABLE(${CMAKE_PROJECT_NAME} ${PROJECT_SOURCES} ${CMSIS_SOURCES} ${STM32HAL_SOURCES})

FUNCTION(STM32_ADD_TARGET_LINK_FLAGS TARGET ADD_FLAGS)
    GET_TARGET_PROPERTY(TARGET_LD_FLAGS ${TARGET} LINK_FLAGS)
    IF(TARGET_LD_FLAGS)
        SET(TARGET_LD_FLAGS "${TARGET_LD_FLAGS} ${ADD_FLAGS}")
    ELSE()
        SET(TARGET_LD_FLAGS ${ADD_FLAGS})
    ENDIF()
    SET_TARGET_PROPERTIES(${TARGET} PROPERTIES LINK_FLAGS ${TARGET_LD_FLAGS})
ENDFUNCTION(STM32_ADD_TARGET_LINK_FLAGS)

STM32_SET_TARGET_PROPERTIES(${CMAKE_PROJECT_NAME})
STM32_ADD_TARGET_LINK_FLAGS(${CMAKE_PROJECT_NAME} "-specs=nano.specs -lc -lm") #-lnosys
STM32_ADD_HEX_BIN_TARGETS(${CMAKE_PROJECT_NAME})
